--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,6 +4,23 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
-    tools:context=".GameActivity">
+    tools:context=".GameActivity"
+
+    android:orientation="horizontal">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/white"
+        android:id="@+id/gamelayout"
+        android:gravity="center"
+        >
+
+        <ImageView
+            android:id="@+id/dumbFuckingPicture"
+            android:layout_width="200sp"
+            android:layout_height="200sp"
+            android:layout_gravity="center"></ImageView>
+    </LinearLayout>
 
 </LinearLayout>
